<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:background="#31FFFFFF"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="@string/username"
        android:background="#31FFFFFF"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="20dp"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passWord"
        android:layout_below="@id/userName"
        android:hint="@string/password"
        android:autofillHints="@string/password"
        android:inputType="textPassword"
        android:background="#31ffffff"
        android:textStyle="bold"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableStart="@drawable/ic_baseline_key_24"
        android:drawablePadding="20dp"
        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passWord"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:text="@string/login" />


    <Button
        android:id="@+id/newUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:text="@string/newUser" />





</RelativeLayout>