<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/img"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItemActivity">

    <EditText
        android:id="@+id/inventoryAdd"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="8dp"
        android:autofillHints="items"
        android:hint="@string/addItem"
        android:inputType="text"
        android:minHeight="48dp"

        android:textColor="#37474F"
        app:layout_constraintBottom_toTopOf="@+id/addButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />


    <Button
        android:id="@+id/addButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/design_default_color_secondary"
        android:text="@string/addItem"
        android:textColor="#0D47A1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addQuantity" />

    <Button
        android:id="@+id/subtractButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/design_default_color_secondary"
        android:text="@string/deleteItem"
        android:textColor="#5E35B1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addButton" />

    <EditText
        android:id="@+id/addQuantity"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autofillHints="numbers"
        android:inputType="number"
        android:minHeight="48dp"
        android:hint="@string/addQuantity"
        android:textColor="#3949AB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inventoryAdd" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/design_default_color_secondary"
        android:text="@string/setting"
        android:textColor="#0D47A1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtractButton" />

    <Switch
        android:id="@+id/toggleSMS"
        android:background="@color/design_default_color_secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:minHeight="32dp"
        android:textSize="20sp"
        android:text="@string/toggleSMS"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <ListView
        android:id="@+id/lv_inventoryList"
        android:layout_width="409dp"
        android:layout_height="377dp"
        app:layout_constraintBottom_toTopOf="@+id/toggleSMS"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsButton"
        app:layout_constraintEnd_toEndOf="parent">
    </ListView>
</androidx.constraintlayout.widget.ConstraintLayout>